--- a/canvas.html
+++ b/canvas.html
@@ -2,179 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Game Đua xe</title>
     <style>
-        canvas { background: #eee; }
+        body {
+            background-color: white;
+        }
+        #myCanvas {
+            background-image: url("");
+            border: 2px solid #FFF;
+            position: absolute;
+        }
+
+        .button {
+            background-color: red;
+            color: white;
+            text-align: center;
+            font-size: 16px;
+            display: block;
+            padding: 15px 32px;
+            border: none;
+        }
     </style>
+
 </head>
 <body>
-<canvas id="myCanvas" width="480" height="320"></canvas>
+<canvas id="myCanvas" width="500px" height="600px"></canvas>
+<p id="score" style="position: absolute;color: white;left: 20px;top: 20px;z-index: 1">Score: </p>
+<button class="button" id="startGame" onclick="start()" style="position: absolute; top:300px; left: 180px;">Start Game</button>
+<p id="restartGame"></p>
+<p id="gameOver" style="position: absolute;font-size: 45px; color: white;left: 120px;top: 170px;z-index: 1"></p>
+<p id="scoreEnd" style="position: absolute;font-size:45px;color: white;left: 170px;top: 255px;z-index: 1"></p>
 <script>
-    let canvas = document.getElementById("myCanvas");
-    let ctx = canvas.getContext("2d");
-    let ballRadius = 10;
-    let x = canvas.width/2;
-    let y = canvas.height-30;
-    let dx = 2;
-    let dy = -15;
-    let paddleHeight = 10;
-    let paddleWidth = 75;
-    let paddleX = (canvas.width-paddleWidth)/2;
-    let rightPressed = false;
-    let leftPressed = false;
-    let brickRowCount = 5;
-    let brickColumnCount = 3;
-    let brickWidth = 75;
-    let brickHeight = 20;
-    let brickPadding = 10;
-    let brickOffsetTop = 30;
-    let brickOffsetLeft = 30;
-    let score = 0;
-    let lives = 3;
 
-    let bricks = [];
-    for(let i = 0; i <brickColumnCount; i++) {
-        bricks[i] = [];
-        for(let j =0; j < brickRowCount; j++) {
-            bricks[i][j] = { x: 0, y: 0, status: 1 };
-        }
-    }
-
-    document.addEventListener("keydown", keyDownHandler, false);
-    document.addEventListener("keyup", keyUpHandler, false);
-    document.addEventListener("mousemove", mouseMoveHandler, false);
-
-    function keyDownHandler(e) {
-        if(e.keyCode == 39) {
-            rightPressed = true;
-        }
-        else if(e.keyCode == 37) {
-            leftPressed = true;
-        }
-    }
-    function keyUpHandler(e) {
-        if(e.keyCode == 39) {
-            rightPressed = false;
-        }
-        else if(e.keyCode == 37) {
-            leftPressed = false;
-        }
-    }
-    function mouseMoveHandler(e) {
-        let relativeX = e.clientX - canvas.offsetLeft;
-        if(relativeX > 0 && relativeX < canvas.width) {
-            paddleX = relativeX - paddleWidth/2;
-        }
-    }
-    function collisionDetection() {
-        for(let i = 0; i < brickColumnCount; i++) {
-            for(let j = 0; j < brickRowCount; j++) {
-                let b = bricks[i][j];
-                if(b.status == 1) {
-                    if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
-                        dy = -dy;
-                        b.status = 0;
-                        score++;
-                        if(score == brickRowCount*brickColumnCount) {
-                            alert("Ai cho thắng mà thắng  x.x ");
-                            document.location.reload();
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    function drawBall() {
-        ctx.beginPath();
-        ctx.arc(x, y, ballRadius, 0, Math.PI*2);
-        ctx.fillStyle = "#0095DD";
-        ctx.fill();
-        ctx.closePath();
-    }
-    function drawPaddle() {
-        ctx.beginPath();
-        ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
-        ctx.fillStyle = "#0095DD";
-        ctx.fill();
-        ctx.closePath();
-    }
-    function drawBricks() {
-        for(let i = 0; i < brickColumnCount; i++) {
-            for(let j = 0; j < brickRowCount; j++) {
-                if(bricks[i][j].status == 1) {
-                    let brickX = (j * (brickWidth+brickPadding))+brickOffsetLeft;
-                    let brickY = (i * (brickHeight+brickPadding))+brickOffsetTop;
-                    bricks[i][j].x = brickX;
-                    bricks[i][j].y = brickY;
-                    ctx.beginPath();
-                    ctx.rect(brickX, brickY, brickWidth, brickHeight);
-                    ctx.fillStyle = "#dd001a";
-                    ctx.fill();
-                    ctx.closePath();
-                }
-            }
-        }
-    }
-    function drawScore() {
-        ctx.font = "16px Arial";
-        ctx.fillStyle = "#dd0046";
-        ctx.fillText("Score: "+score, 8, 20);
-    }
-    function drawLives() {
-        ctx.font = "16px Arial";
-        ctx.fillStyle = "#00dd04";
-        ctx.fillText("Lives: "+lives, canvas.width-65, 20);
-    }
-
-    function draw() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        drawBricks();
-        drawBall();
-        drawPaddle();
-        drawScore();
-        drawLives();
-        collisionDetection();
-
-        if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
-            dx = -dx;
-        }
-        if(y + dy < ballRadius) {
-            dy = -dy;
-        }
-        else if(y + dy > canvas.height-ballRadius) {
-            if(x > paddleX && x < paddleX + paddleWidth) {
-                dy = -dy;
-            }
-            else {
-                lives--;
-                if(!lives) {
-                    alert("THUA RỒI LỀU LẾU LỀU LỀU LÊU");
-                    document.location.reload();
-                }
-                else {
-                    x = canvas.width/2;
-                    y = canvas.height-30;
-                    dx = 3;
-                    dy = -15;
-                    paddleX = (canvas.width-paddleWidth)/2;
-                }
-            }
-        }
-
-        if(rightPressed && paddleX < canvas.width-paddleWidth) {
-            paddleX += 7;
-        }
-        else if(leftPressed && paddleX > 0) {
-            paddleX -= 7;
-        }
-
-        x += dx;
-        y += dy;
-        requestAnimationFrame(draw);
-    }
-
-    draw();
 </script>
 </body>
 </html>
